tests/rosetta/transpiler/FS/constrained-genericity-4.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-genericity-4.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Constrained-genericity-4' based on the file name 'constrained-genericity-4.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-genericity-4.fs(25,12): error FS0039: The type 'PeelFirst' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-genericity-4.fs(25,12): error FS0039: The type 'PeelFirst' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-genericity-4.fs(37,11): warning FS0049: Uppercase variable identifiers should not generally be used in patterns, and may indicate a misspelt pattern name.

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-genericity-4.fs(37,11): warning FS0049: Uppercase variable identifiers should not generally be used in patterns, and may indicate a misspelt pattern name.

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-genericity-4.fs(44,37): error FS0039: The field, constructor or member 'Item' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-genericity-4.fs(52,11): warning FS0049: Uppercase variable identifiers should not generally be used in patterns, and may indicate a misspelt pattern name.

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-genericity-4.fs(52,11): warning FS0049: Uppercase variable identifiers should not generally be used in patterns, and may indicate a misspelt pattern name.
